# grist-mcp-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.gitea/workflows/: release.yml
.github/workflows/: build.yaml
deploy/dev/: .env.example  config.yaml  docker-compose.yml
deploy/prod/: .env.example  docker-compose.yml
deploy/test/: docker-compose.yml
docs/plans/: 2025-12-03-grist-mcp-design.md  2025-12-03-grist-mcp-implementation.md  2025-12-29-docker-deployment-design.md  2025-12-29-docker-deployment.md  2025-12-30-docker-service-skill-adaptation.md  2025-12-30-pre-deployment-testing-design.md  2025-12-30-pre-deployment-testing-impl.md  2026-01-02-logging-improvements-design.md  2026-01-02-logging-improvements-impl.md  2026-01-02-session-proxy-design.md  2026-01-02-session-proxy-impl.md  2026-01-03-attachment-upload-design.md
scripts/: get-test-instance-id.sh  run-integration-tests.sh  test-runner.py
src/grist_mcp/: __init__.py  auth.py  config.py  grist_client.py  logging.py  main.py  proxy.py  server.py  session.py
tests/: test_auth.py  test_grist_client.py  test_server.py  test_tools_read.py
tests/integration/: config.test.yaml  conftest.py  test_mcp_protocol.py  test_session_proxy.py  test_tools_integration.py
tests/unit/: test_auth.py  test_config.py  test_filters.py  test_grist_client.py  test_logging.py  test_proxy.py  test_server.py  test_session.py  test_tools_discovery.py  test_tools_read.py  (+3 more)
(+10 files in other folders)
